tests/custom/STARIS_2022/operation-type-errors/toInt-type-error/stderr.expected
Error:
    Parser error in file: toInt-type-error.essence Error is:
ValidatorError toInt-type-error.essence:2:21:
  |
2 | such that i = toInt([false, true, false])
  |                     ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: bool
	Got: matrix indexed by [int] of bool

